# datacrush

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
crates/filestore/: .gitignore  Cargo.toml
crates/filestore/src/: lib.rs
migrations/: 20231215234445_initial_redirects.sql  20231216005013_paste_table.sql  20231216045001_file_table.sql
src/: config.rs  file.rs  func.rs  main.rs  paste.rs  redirect.rs
src/func/: redirect.rs
